--- a/package.json
+++ b/package.json
@@ -37,20 +37,24 @@
   "author": "pysunday",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@optimize-lodash/rollup-plugin": "^4.0.4",
     "@release-it/conventional-changelog": "^8.0.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^30.0.5",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^27.6.1",
     "gzip-size-cli": "^5.1.0",
     "jest": "^29.7.0",
-    "release-it": "^17.0.1",
+    "jsdom": "^26.1.0",
     "lodash-es": "^4.17.21",
+    "release-it": "^17.0.1",
     "rollup": "^4.9.4"
   },
   "jest": {
